migrating app to postgress, need to add extention in postgres and rename as newid. CREATE EXTENSION IF NOT EXISTS "uuid-ossp";

--- a/CourtApp.Web/appsettings.json
+++ b/CourtApp.Web/appsettings.json
@@ -17,12 +17,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"ApplicationConnection": "Data Source=DESKTOP-7ME38CO;Initial Catalog=ECourt;Integrated Security=True;MultipleActiveResultSets=True",
-    //"ApplicationConnection": "Data Source=tcp:lawyerdiary.database.windows.net,1433;Initial Catalog=lawyerdiary;User Id=lawyer;Password=Dev@12345;MultipleActiveResultSets=true;",
-
-    "IdentityConnection": "Data Source=DESKTOP-7ME38CO;Initial Catalog=ECourt;Integrated Security=True;MultipleActiveResultSets=True",
-    //"ApplicationConnection": "Data Source=DESKTOP-7ME38CO;Initial Catalog=ECourt;Integrated Security=True;MultipleActiveResultSets=True"
-    //"IdentityConnection": "Data Source=tcp:lawyerdiary.database.windows.net,1433;Initial Catalog=lawyerdiary;User Id=lawyer;Password=Dev@12345;MultipleActiveResultSets=true;"
+    "DbCnnection": "server=localhost;port=5432;user id=postgres;password=12345;database=lawyer_diary"
+    //"IdentityConnection": "server=localhost;port=5432;user id=postgres;password=12345;database=db_advocate",
+    //"ApplicationConnection": "server=localhost;port=5432;user id=postgres;password=12345;database=db_advocate"
   },
   "Serilog": {
     "MinimumLevel": {
