Audit Log Commit

--- a/CourtApp.Web/appsettings.json
+++ b/CourtApp.Web/appsettings.json
@@ -1,12 +1,12 @@
 {
   "UseInMemoryDatabase": false,
   "MailSettings": {
-    "From": "info@codewithmukesh.com",
+    "From": "devdushyantsingh@gmail.com",
     "Host": "smtp.ethereal.email",
     "Port": 587,
     "UserName": "reece6@ethereal.email",
     "Password": "ddNKqjb5NwCwq98d5Z",
-    "DisplayName": "Mukesh Murugan"
+    "DisplayName": "Dushyant Singh"
   },
   "Logging": {
     "LogLevel": {
@@ -17,7 +17,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbCnnection": "server=localhost;port=5432;user id=postgres;password=12345;database=lawyer_diary"
+    "DbCnnection": "server=localhost;port=5432;user id=postgres;password=12345;database=Juridiciary"
     //"IdentityConnection": "server=localhost;port=5432;user id=postgres;password=12345;database=db_advocate",
     //"ApplicationConnection": "server=localhost;port=5432;user id=postgres;password=12345;database=db_advocate"
   },
