advocate and ld merging

--- a/CourtApp.Web/appsettings.json
+++ b/CourtApp.Web/appsettings.json
@@ -18,6 +18,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DbCnnection": "server=localhost;port=5432;user id=postgres;password=12345;database=court_app"
+   // "DbCnnection": "server=flora.db.elephantsql.com;port=5432;user id=cmjfmohi;password=JnIrJ8DyOyb2Y24UBHQkkvhK0gSec3hn;database=cmjfmohi"
   },
   "Serilog": {
     "MinimumLevel": {
