--- a/CourtApp.Domain/CourtApp.Domain.csproj
+++ b/CourtApp.Domain/CourtApp.Domain.csproj
@@ -5,12 +5,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Entities\Advocate\NavigationEntity.cs" />
+    <Compile Remove="Entities\Advocate\NotificationAmendedEntity.cs" />
+    <Compile Remove="Entities\Advocate\NotificationBookEntity.cs" />
+    <Compile Remove="Entities\Advocate\NotificationEntity.cs" />
+    <Compile Remove="Entities\Advocate\NotificationExtActEntity.cs" />
+    <Compile Remove="Entities\Advocate\NotificationRepealedEntity.cs" />
+    <Compile Remove="Entities\Advocate\NotificationType.cs" />
+    <Compile Remove="Entities\Advocate\RuleActExtraEntity.cs" />
+    <Compile Remove="Entities\Advocate\RuleAmendedEntity.cs" />
+    <Compile Remove="Entities\Advocate\RuleBookEntity.cs" />
+    <Compile Remove="Entities\Advocate\RuleEntity.cs" />
+    <Compile Remove="Entities\Advocate\RuleRepealedEntity.cs" />
     <Compile Remove="Entities\Common\AuditEntity.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="audit-trail" Version="1.1.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Entities\Advocate\" />
   </ItemGroup>
 </Project>
