--- a/CourtApp.Infrastructure/CourtApp.Infrastructure.csproj
+++ b/CourtApp.Infrastructure/CourtApp.Infrastructure.csproj
@@ -6,6 +6,7 @@
   <ItemGroup>
     <PackageReference Include="AspNetCoreHero.Extensions.Caching" Version="1.1.0" />
     <PackageReference Include="audit-trail" Version="1.1.0" />
+    <PackageReference Include="EFCore.BulkExtensions" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.2">
       <PrivateAssets>all</PrivateAssets>
