--- a/CourtApp.Infrastructure/CourtApp.Infrastructure.csproj
+++ b/CourtApp.Infrastructure/CourtApp.Infrastructure.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Migrations\" />
+    <Folder Include="Migrations\App\" />
     <Folder Include="Migrations\Identity\" />
   </ItemGroup>
 </Project>
