--- a/CourtApp.Api/CourtApp.Api.fsproj
+++ b/CourtApp.Api/CourtApp.Api.fsproj
@@ -11,4 +11,8 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="8.0.300" />
+  </ItemGroup>
+
 </Project>
