--- a/CourtApp.Web/appsettings.json
+++ b/CourtApp.Web/appsettings.json
@@ -19,7 +19,7 @@
   "ConnectionStrings": {
 
     "DbCnnection": "server=localhost;port=5432;user id=postgres;password=12345;database=court_app",
-    //"DbCnnection": "server=flora.db.elephantsql.com;port=5432;user id=cmjfmohi;password=JnIrJ8DyOyb2Y24UBHQkkvhK0gSec3hn;database=cmjfmohi"
+    //"DbCnnection": "server=rosie.db.elephantsql.com;port=5432;user id=alrlhujc;password=JUerW2KKYkeO-_DfLAL7ZdDS9SDyzqFf"
   },
   "Serilog": {
     "MinimumLevel": {
