Change tha database name

--- a/CourtApp.Web/appsettings.json
+++ b/CourtApp.Web/appsettings.json
@@ -17,7 +17,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbCnnection": "Host=laywerdairy.postgres.database.azure.com;Port=5432;Database=lawyer_dairy@laywerdairy;Username=lawyerdiary;Password=Dev@12345;SSL Mode=Require;Trust Server Certificate=True"
+    "DbCnnection": "Host=laywerdairy.postgres.database.azure.com;Port=5432;Database=lawyer_dairy;Username=lawyerdiary;Password=Dev@12345;SSL Mode=Require;Trust Server Certificate=True"
   },
   "Serilog": {
     "MinimumLevel": {
