Revert "update the todays hearing and some bugs"
This reverts commit 08810ee829bf3ec2402bb0cb1948e91d69f8f1d2.

--- a/CourtApp.Web/appsettings.json
+++ b/CourtApp.Web/appsettings.json
@@ -17,7 +17,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbCnnection": "Host=localhost;Port=5432;Database=layer_diary;Username=postgres;Password=12345;"
+    "DbCnnection": "server=localhost;port=5432;user id=postgres;password=12345;database=layer_diary"
   },
   "Serilog": {
     "MinimumLevel": {
