--- a/CourtApp.Web/appsettings.json
+++ b/CourtApp.Web/appsettings.json
@@ -17,7 +17,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbCnnection": "server=laywerdairy.postgres.database.azure.com;port=5432;user id=lawyerdiary;password=Dev@12345;SSL Mode=Require;Trust Server Certificate=True;database=lawyer_dairy"
+    "DbCnnection": "server=localhost;port=5432;user id=postgres;password=12345;database=layer_diary"
   },
   "Serilog": {
     "MinimumLevel": {
