Fixes the bugs and improvement

--- a/CourtApp.Web/appsettings.json
+++ b/CourtApp.Web/appsettings.json
@@ -8,6 +8,10 @@
     "Password": "emcr ovaf elfo lhgd",
     "DisplayName": "Dushyant Singh"
   },
+  "WhatsAppSettings": {
+    "ApiUrl": "https://waba.360dialog.io/v1/messages",
+    "ApiKey": "YOUR_API_KEY"   
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -17,7 +21,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbCnnection": "server=localhost;port=5432;user id=postgres;password=12345;database=layer_diary",
+    "DbCnnection": "server=localhost;port=5432;user id=postgres;password=12345;database=layer_diary"
     //"DbCnnection": "server=laywerdairy.postgres.database.azure.com;port=5432;user id=lawyerdiary;password=Dev@12345;SSL Mode=Require;Trust Server Certificate=True;database=lawyer_dairy"
   },
   "AzureBlobStorage": {
@@ -26,7 +30,7 @@
     "Containers": {
       "ProfileImages": "profile-images",
       "DraftDocuments": "draft-documents",
-      "OrderDocuments": "order-documents"      
+      "OrderDocuments": "order-documents"
     }
   },
   "Serilog": {
