Update kestral file upload max size and blob storage

--- a/CourtApp.Web/appsettings.json
+++ b/CourtApp.Web/appsettings.json
@@ -1,5 +1,10 @@
 {
   "UseInMemoryDatabase": false,
+  "Kestrel": {
+    "Limits": {
+      "MaxRequestBodySize": 209715200 // 200MB
+    }
+  },
   "MailSettings": {
     "From": "devdushyantsingh@gmail.com",
     "Host": "smtp.gmail.com",
@@ -10,7 +15,7 @@
   },
   "WhatsAppSettings": {
     "ApiUrl": "https://waba.360dialog.io/v1/messages",
-    "ApiKey": "YOUR_API_KEY"   
+    "ApiKey": "YOUR_API_KEY"
   },
   "Logging": {
     "LogLevel": {
