Bug fixes and document upload on google cloud

--- a/CourtApp.Web/appsettings.json
+++ b/CourtApp.Web/appsettings.json
@@ -30,7 +30,7 @@
   },
 
   "UploadSettings": {
-    "Provider": "Azure", // Options: Azure | GoogleDrive | Local
+    "Provider": "GoogleDrive", // Options: Azure | GoogleDrive | Local
 
     "Folders": {
       "ProfileImages": "profile-images",
@@ -45,9 +45,9 @@
     },
 
     "GoogleDrive": {
-      "ServiceAccountKeyFilePath": "path/to/your/service-account-key.json",
-      "BaseFolderId": "your-google-drive-folder-id",
-      "ApplicationName": ""
+      "ServiceAccountKeyFilePath": "service-account-key.json",
+      "BaseFolderId": "1J6RAHwy1rNxq5eQ7BTTuRX2ZMDzN10rZ",
+      "ApplicationName": "LawyerDiary"
     },
 
     "Local": {
