Document upload fixes

--- a/CourtApp.Web/appsettings.json
+++ b/CourtApp.Web/appsettings.json
@@ -26,7 +26,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DbCnnection": "server=localhost;port=5432;user id=postgres;password=12345;database=layer_diary"
+    "DbCnnection": "server=localhost;port=5432;user id=postgres;password=12345;database=lawyerdiarydb"
   },
 
   "UploadSettings": {
@@ -45,9 +45,10 @@
     },
 
     "GoogleDrive": {
-      "ServiceAccountKeyFilePath": "service-account-key.json",
-      "BaseFolderId": "1J6RAHwy1rNxq5eQ7BTTuRX2ZMDzN10rZ",
-      "ApplicationName": "LawyerDiary"
+        "ServiceAccountKeyFilePath": "service-account-key.json",
+        "BaseFolderId": "1ZtuqfP89zQSW1exL6HUQFQ4AAbwGpAty",
+        "ApplicationName": "LawyerDiary",
+        "DownloadBaseUri": "https://drive.google.com/uc?export=download&id="
     },
 
     "Local": {
