--- a/CourtApp.Web/appsettings.json
+++ b/CourtApp.Web/appsettings.json
@@ -1,14 +1,15 @@
 {
   "UseInMemoryDatabase": false,
 
-  "MailSettings": {
-    "From": "devdushyantsingh@gmail.com",
-    "Host": "smtp.gmail.com",
-    "Port": 587,
-    "UserName": "devdushyantsingh@gmail.com",
-    "Password": "emcr ovaf elfo lhgd",
-    "DisplayName": "Dushyant Singh"
-  },
+    "MailSettings": {
+        "From": "applawyerdiary@gmail.com",
+        "Host": "smtp.gmail.com",
+        "Port": 587,
+        "UserName": "applawyerdiary@gmail.com",
+        "Password": "kmgp spfo tsph gtoi",
+        "DisplayName": "Dushyant Singh",
+        "EnableSsl": true
+    },
 
   "WhatsAppSettings": {
     "ApiUrl": "https://waba.360dialog.io/v1/messages",
