--- a/CourtApp.Web/appsettings.json
+++ b/CourtApp.Web/appsettings.json
@@ -26,9 +26,10 @@
 
   "AllowedHosts": "*",
 
-  "ConnectionStrings": {
-    "DbCnnection": "server=localhost;port=5432;user id=postgres;password=12345;database=lawyerdiarydb"
-  },
+    "ConnectionStrings": {
+        "DbCnnection": "server=localhost;port=5432;user id=postgres;password=12345;database=lawyerdiarydb"
+        //"DbCnnection": "server=pg-lawyerdiary-applawyerdiary-843c.g.aivencloud.com;port=11871;user id=avnadmin;password=AVNS_nPD6rJzDv2ntgUxzYxt;database=lawyerdiarydb"
+    },
 
   "UploadSettings": {
     "Provider": "GoogleDrive", // Options: Azure | GoogleDrive | Local
