--- a/CourtApp.Web/appsettings.json
+++ b/CourtApp.Web/appsettings.json
@@ -27,7 +27,7 @@
   "AllowedHosts": "*",
 
     "ConnectionStrings": {
-        "DbCnnection": "server=localhost;port=5432;user id=postgres;password=12345;database=lawyerdiarydb"
+        "DbCnnection": "server=localhost;port=5432;user id=postgres;password=12345;database=diaryapp"
         //"DbCnnection": "server=pg-lawyerdiary-applawyerdiary-843c.g.aivencloud.com;port=11871;user id=avnadmin;password=AVNS_nPD6rJzDv2ntgUxzYxt;database=lawyerdiarydb"
     },
 
