Document Upload modification and dashboard changes....

--- a/.gitignore
+++ b/.gitignore
@@ -453,3 +453,5 @@ $RECYCLE.BIN/
 !.vscode/launch.json
 !.vscode/extensions.json
 /CourtApp.Web/appsettings.json
+/CourtApp.Web/appsettings.json
+/CourtApp.Web/Properties/launchSettings.json
